--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "block-comment",
   "version": "1.0.0",
-  "description": "Create multi-line block comment from a string or an array",
+  "description": "Create a multi-line block comment from a string or an array",
   "keywords": [
     "string",
     "comment",
