--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "block-comment",
   "version": "0.0.0",
-  "description": "Create multi-line block comment from a string or an array",
+  "description": "Create a multi-line block comment from a string or an array",
   "main": "./block-comment-cjs.js",
   "bin": "cli.js",
   "files": [
