--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 init:
   - git config --global core.autocrlf input
 
+shallow_clone: true
+
 version: '{build}'
 
 environment:
@@ -19,3 +21,6 @@ test_script:
   - ps: 'node test-cli.js # PowerShell'
   - cmd: node test-api.js
   - cmd: node test-cli.js
+
+cache:
+  - node_modules
