--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chalk": "^0.5.1",
     "get-stdin": "^3.0.0",
     "minimist": "^1.1.0"
+    "sum-up": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^0.9.1",
