--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "block-comment",
   "version": "1.0.0",
   "description": "Create a multi-line block comment from a string or an array",
-  "main": "./block-comment-cjs.js",
+  "main": "block-comment-cjs.js",
   "bin": "cli.js",
   "files": [
     "cli.js",
@@ -20,14 +20,7 @@
     "email": "snnskwtnb@gmail.com",
     "url": "https://github.com/shinnn"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/shinnn/block-comment.js.git"
-  },
-  "bugs": {
-    "url": "https://github.com/shinnn/block-comment.js/issues"
-  },
-  "homepage": "https://github.com/shinnn/block-comment.js",
+  "repository": "shinnn/block-comment.js",
   "licenses": [
     {
       "type": "MIT",
@@ -44,16 +37,18 @@
   ],
   "dependencies": {
     "chalk": "^0.5.1",
-    "get-stdin": "^3.0.0",
-    "minimist": "^1.1.0"
+    "get-stdin": "^4.0.1",
+    "minimist": "^1.1.0",
     "sum-up": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^0.9.1",
-    "istanbul": "^0.3.2",
+    "eslint": "^0.13.0",
+    "istanbul": "^0.3.5",
     "istanbul-coveralls": "^1.0.1",
-    "jscs": "^1.7.3",
-    "tape": "^3.0.1"
+    "jscs": "^1.10.0",
+    "tap-spec": "^2.2.0",
+    "tape": "^3.4.0"
+  },
   "jscsConfig": {
     "preset": "google",
     "maximumLineLength": 98,
