use @shinnn/eslintrc and remove jscs
https://github.com/shinnn/eslintrc
https://www.npmjs.com/package/@shinnn/eslintrc

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "block-comment-cjs.js"
   ],
   "scripts": {
-    "pretest": "jscs *.js && eslint *.js",
+    "pretest": "eslint --config node_modules/@shinnn/eslintrc/rc.json --rule 'no-reserved-keys: 0' --ignore-path .gitignore .",
     "test": "tape test-*.js | tap-spec",
     "coverage": "istanbul cover test-api.js",
     "coveralls": "${npm_package_scripts_coverage} && istanbul-coveralls"
@@ -37,20 +37,15 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "get-stdin": "^4.0.1",
-    "minimist": "^1.1.0",
+    "minimist": "^1.1.1",
     "sum-up": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^0.15.0",
-    "istanbul": "^0.3.6",
-    "istanbul-coveralls": "^1.0.1",
-    "jscs": "^1.11.3",
-    "tap-spec": "^2.2.1",
-    "tape": "^3.5.0"
-  },
-  "jscsConfig": {
-    "preset": "google",
-    "maximumLineLength": 98,
-    "validateLineBreaks": "LF"
+    "@shinnn/eslintrc": "^1.0.0",
+    "eslint": "^0.20.0",
+    "istanbul": "^0.3.13",
+    "istanbul-coveralls": "^1.0.2",
+    "tap-spec": "^3.0.0",
+    "tape": "^4.0.0"
   }
 }
