--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,29 +1,18 @@
-init:
-  - git config --global core.autocrlf input
-
+init: git config --global core.autocrlf input
 shallow_clone: true
-
 version: '{build}'
-
 skip_tags: true
-
 environment:
   matrix:
-    - nodejs_version: '1'
+    - nodejs_version: '2'
     - nodejs_version: '0'
-
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install --production
   - npm install tape
-
 build: off
-
 test_script:
-  - ps: 'node test-api.js # PowerShell'
-  - ps: 'node test-cli.js # PowerShell'
-  - cmd: node test-api.js
-  - cmd: node test-cli.js
+  - node test-api.js
+  - node test-cli.js
 
-cache:
-  - node_modules
+cache: node_modules
