--- a/package.json
+++ b/package.json
@@ -1,42 +1,34 @@
 {
-  "name": "block-comment",
-  "version": "1.0.3",
-  "description": "Create a multi-line block comment from a string or an array",
-  "main": "block-comment-cjs.js",
-  "bin": "cli.js",
-  "files": [
-    "cli.js",
-    "block-comment-cjs.js"
-  ],
-  "scripts": {
-    "pretest": "eslint --config node_modules/@shinnn/eslintrc/rc.json --rule 'no-reserved-keys: 0' --ignore-path .gitignore .",
-    "test": "tape test-*.js | tap-spec",
-    "coverage": "istanbul cover test-api.js",
-    "coveralls": "${npm_package_scripts_coverage} && istanbul-coveralls"
-  },
-  "author": "Shinnosuke Watanabe (https://github.com/shinnn)",
-  "repository": "shinnn/block-comment.js",
-  "license": "MIT",
-  "keywords": [
-    "string",
-    "comment",
-    "block",
-    "multline",
-    "browser",
-    "client-side"
-  ],
-  "dependencies": {
-    "chalk": "^1.1.0",
-    "get-stdin": "^4.0.1",
-    "minimist": "^1.1.1",
-    "sum-up": "^1.0.2"
-  },
-  "devDependencies": {
-    "@shinnn/eslintrc": "^1.0.0",
-    "eslint": "^0.24.0",
-    "istanbul": "^0.3.17",
-    "istanbul-coveralls": "^1.0.3",
-    "tap-spec": "^4.0.0",
-    "tape": "^4.0.0"
-  }
+	"name": "block-comment",
+	"version": "1.0.3",
+	"description": "Create a multiline block comment from a string or an array",
+	"author": "Shinnosuke Watanabe (https://github.com/shinnn)",
+	"repository": "shinnn/block-comment.js",
+	"license": "MIT",
+	"main": "block-comment-cjs.js",
+	"files": [
+		"block-comment-cjs.js"
+	],
+	"scripts": {
+		"pretest": "eslint --config node_modules/@shinnn/eslintrc/rc.json --rule 'no-reserved-keys: 0' --ignore-path .gitignore .",
+		"test": "node test.js | tap-spec",
+		"coverage": "istanbul cover test.js",
+		"coveralls": "${npm_package_scripts_coverage} && istanbul-coveralls"
+	},
+	"keywords": [
+		"string",
+		"comment",
+		"block",
+		"multline",
+		"browser",
+		"client-side"
+	],
+	"devDependencies": {
+		"@shinnn/eslintrc": "^1.0.0",
+		"eslint": "^0.24.0",
+		"istanbul": "^0.3.17",
+		"istanbul-coveralls": "^1.0.3",
+		"tap-spec": "^4.0.0",
+		"tape": "^4.0.0"
+	}
 }
