--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
-sudo: false
-git:
-  depth: 2
+if: branch !~ ^v\d
+dist: xenial
 language: node_js
-node_js:
-  - iojs
-  - node
-after_script:
-  - npm run-script coveralls
-notifications:
-  email: false
+node_js: node
+after_script: npm run-script coveralls
